--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <h1>Conversor Temperatura</h1>
-    <p> Entre com a temperatura em Celcius ---> Fahrenheit </p>
+    <p> Entre com a temperatura em Celsius ---> Fahrenheit </p>
     <form th:action="@{/converter}" method="post">
-        <label> Temperatura Celcius </label>
-        <input type="text" placeholder="Ex. 20.5" required>
+        <label> Temperatura  </label>
+        <input type="text" name="celsius" placeholder="Ex. 20.5" required>
         <button type="submit">Converter</button>
     </form>
+    <p th:if="${fahrenheit != null}">Temperatura fahrenheit <strong th:text="{fahrenheit}"> </strong></p>
 </body>
 </html>
